# caliptra-mcu-sw

./: .gitignore  .gitmodules  Cargo.toml  README.md  err.txt  log.txt
.github/workflows/: build-test.yml  fpga.yml  spdm-validator.yml
builder/src/: apps.rs  caliptra.rs  flash_image.rs  lib.rs  rom.rs  runtime.rs
docs/src/: caliptra_pldmtool.md  logging.md  memory_mapped_flash.md  spdm.md
emulator/app/: Cargo.toml
emulator/app/src/: i3c_socket.rs  main.rs  mctp_transport.rs  thread_manager.rs
emulator/bmc/pldm/: Cargo.toml  README.md
emulator/bmc/pldm-fw-pkg/: manifest.toml
emulator/bmc/pldm/src/: dummy_transport.rs  lib.rs  packet.rs  transport.rs
emulator/bmc/pldm/src/firmware_update/: mod.rs  packet.rs  update_agent.rs
emulator/bmc/pldm/tests/: test_dummy_transport.rs  test_packet.rs  test_query_device_identifier.rs
emulator/bmc/pldm/tests/package/: manifest.toml
emulator/bmc/src/: bmc.rs  recovery.rs
emulator/caliptra/src/: caliptra.rs
emulator/consts/src/: lib.rs
emulator/periph/: Cargo.toml
emulator/periph/src/: dma_ctrl.rs  flash_ctrl.rs  i3c.rs  lc_ctrl.rs  lib.rs  root_bus.rs
hw/: clp2.rdl  dma.rdl
hw/fpga/kernel-modules/: caliptra_rom_backdoor.c  io_module.c
hw/model/: Cargo.toml
hw/model/src/: bus_logger_mcu.rs  fpga_regs.rs  lib.rs  model_emulated.rs  model_fpga_realtime.rs  vmem.rs
hw/model/src/i3c_controller/: mod.rs  xi3c.rs  xi3c_g.rs  xi3c_master.rs  xi3c_options.rs  xi3c_sinit.rs
hw/model/src/xi3c/: controller.rs  mod.rs  xi3c.rs  xi3c_master.rs
hw/model/tests/: model_tests.rs
registers/generated-emulator/: Cargo.toml
registers/generated-emulator/src/: dma.rs  doe_mbox.rs  el2_pic.rs  i3c.rs  lc.rs  lib.rs  main_flash.rs  mbox.rs  mci.rs  otp.rs  primary_flash.rs  root_bus.rs  (+6 more)
registers/generated-firmware/: Cargo.toml
rom/: Cargo.toml
rom/src/: dma.rs  flash_ctrl.rs  fuses.rs  i3c.rs  lib.rs  recovery.rs  riscv.rs  rom.rs
romtime/src/: soc_manager.rs
runtime/: Cargo.toml
runtime/capsules/: Cargo.toml
runtime/src/: board.rs  chip.rs  main.rs
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs  smoke_test.rs  test_firmware_update.rs  test_soc_boot.rs
xtask/src/: fpga.rs  header.rs  main.rs  precheckin.rs  registers.rs  rom.rs  runtime.rs  test.rs
(+189 files in other folders)
