# Licensed under the Apache-2.0 license

[package]
name = "mcu-hw-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
fpga_realtime = ["dep:uio"]
itrng = []

[dependencies]
bit-vec.workspace = true
bitfield.workspace = true
caliptra-api-types.workspace = true
caliptra-api.workspace = true
caliptra-emu-bus.workspace = true
caliptra-emu-cpu.workspace = true
caliptra-emu-periph.workspace = true
caliptra-emu-types.workspace = true
caliptra-hw-model-types.workspace = true
caliptra-image-types.workspace = true
caliptra-registers.workspace = true
emulator-bus.workspace = true
emulator-cpu.workspace = true
emulator-periph.workspace = true
libc.workspace = true
nix.workspace = true
rand.workspace = true
emulator-registers-generated.workspace = true
sha2.workspace = true
uio = { workspace = true, optional = true }
ureg.workspace = true
zerocopy.workspace = true

[dev-dependencies]
caliptra-builder.workspace = true
caliptra-registers.workspace = true
caliptra-test-harness-types.workspace = true
nix.workspace = true
