[package]
name = "pldm"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
derive_more.workspace = true
env_logger.workspace = true
log.workspace = true
num-derive.workspace = true
num-traits.workspace = true
pldm-fw-pkg.workspace = true
tokio.workspace = true
